deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongodb-deployment
  namespace: mongo-app-ns
  labels:
    app:  mongodb-app
spec:
  selector:
    matchLabels:
      app: mongodb-app
  replicas: 1
  template:
    metadata:
      labels:
        app:  mongodb-app
    spec:
      containers:
      - name:  mongodb-db
        image:  mongo
        ports:
        - containerPort: 27017
        livenessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 5
          periodSeconds: 10
        
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: mongo-app-ns
spec:
  selector:
    app: mongodb-app
  ports:
  - name: mongo-db-port
    protocol: TCP
    port: 27017
    targetPort: 27017
