mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongo-express-deployment
  namespace: mongo-app-ns
  labels:
    app:  mongo-express
spec:
  selector:
    matchLabels:
      app: mongo-express
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  mongo-express
    spec:
      containers:
        - name:  mongo-express-app
          image:  mongo-express:1.0.2
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: mongo-app-ns
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
  - name: mongo-express-port
    protocol: TCP
    port: 8081 # this will be for the internal services. This is like its own private VPN
    targetPort: 8081 # this will be the container's port
    nodePort: 30001
